# sonar-competition

./: .gitignore  CLAUDE.md  README.md  requirements.txt  splits.py
experiments/01_uci_tabular/: run.py
experiments/02_audio_cnn/: config.yaml  run.py
experiments/03_synthetic_sim/: run.py
experiments/04_audio_ast/: config.yaml  kaggle_ast.ipynb  run.py
experiments/04_deepship/: config.yaml
notebooks/: kaggle_phase2.py
scripts/: download_data.py
sonar_toolkit/: __init__.py  dataset.py  device.py  loop.py  pyproject.toml  requirements-gpu.txt  simulator.py  transfer.py
sonar_toolkit/augment/: __init__.py  spec.py
sonar_toolkit/features/: __init__.py  aggregate.py  narrowband.py  spectral.py
sonar_toolkit/loaders/: __init__.py  tabular.py
sonar_toolkit/models/: __init__.py  ast.py  cnn.py  gbm.py
sonar_toolkit/validation/: __init__.py  cv.py  metrics.py  torch_cv.py
tests/: test_metrics.py
